--- a/tox.ini
+++ b/tox.ini
@@ -83,6 +83,16 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev_requirements.txt
 
+[testenv:integration-azure-dw-py36]
+basepython = python3.6
+passenv = *
+setenv =
+    HOME=/root/
+commands = /bin/bash -c '{envpython} $(which nosetests) -v -a type=azure_dw {posargs} --with-coverage --cover-branches --cover-html --cover-html-dir=htmlcov test/integration/*'
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/dev_requirements.txt
+
 [testenv:pywin]
 basepython = {env:PYTHON:}\python.exe
 passenv = *
