--- a/tox.ini
+++ b/tox.ini
@@ -93,6 +93,16 @@ deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev_requirements.txt
 
+[testenv:integration-sql-server-py36]
+basepython = python3.6
+passenv = *
+setenv =
+    HOME=/root/
+commands = /bin/bash -c '{envpython} $(which nosetests) -v -a type=sql_server {posargs} --with-coverage --cover-branches --cover-html --cover-html-dir=htmlcov test/integration/*'
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/dev_requirements.txt
+
 [testenv:pywin]
 basepython = {env:PYTHON:}\python.exe
 passenv = *
