--- a/circle.yml
+++ b/circle.yml
@@ -14,9 +14,10 @@ dependencies:
   pre:
     - pip install --upgrade pip setuptools || true
     - pip install --upgrade tox tox-pyenv
-    - curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
-    - curl https://packages.microsoft.com/config/ubuntu/14.04/prod.list > /etc/apt/sources.list.d/mssql-release.list
-    - ACCEPT_EULA=Y apt-get install -y unixodbc odbcinst unixodbc-dev locales msodbcsql
+    - sudo curl https://packages.microsoft.com/keys/microsoft.asc | apt-key add -
+    - sudo curl https://packages.microsoft.com/config/ubuntu/14.04/prod.list > /etc/apt/sources.list.d/mssql-release.list
+    - sudo apt-get update
+    - ACCEPT_EULA=Y sudo apt-get install -y unixodbc odbcinst unixodbc-dev locales msodbcsql
   override:
     - pyenv local 2.7.12 3.6.0
 
