actually run sqlserver tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 skipsdist = True
-envlist = unit-py27, unit-py36, integration-postgres-py27, integration-postgres-py36, integration-snowflake-py27, integration-snowflake-py36, pep8, integration-bigquery-py27, integration-bigquery-py36
+envlist = unit-py27, unit-py36, pep8, integration-postgres-py27, integration-postgres-py36, integration-snowflake-py27, integration-snowflake-py36, integration-bigquery-py27, integration-bigquery-py36, integration-sql-server-py27, integration-sql-server-py36
 
 [testenv:pep8]
 basepython = python3.6
@@ -49,6 +49,16 @@ passenv = *
 setenv =
     HOME=/root/
 commands = /bin/bash -c '{envpython} $(which nosetests) -v -a type=bigquery {posargs} --with-coverage --cover-branches --cover-html --cover-html-dir=htmlcov test/integration/*'
+deps =
+    -r{toxinidir}/requirements.txt
+    -r{toxinidir}/dev_requirements.txt
+
+[testenv:integration-sql-server-py36]
+basepython = python2.7
+passenv = *
+setenv =
+    HOME=/root/
+commands = /bin/bash -c '{envpython} $(which nosetests) -v -a type=sql_server {posargs} --with-coverage --cover-branches --cover-html --cover-html-dir=htmlcov test/integration/*'
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/dev_requirements.txt
