--- a/circle.yml
+++ b/circle.yml
@@ -18,6 +18,7 @@ dependencies:
     - sudo sh -c 'curl https://packages.microsoft.com/config/ubuntu/14.04/prod.list > /etc/apt/sources.list.d/mssql-release.list'
     - sudo apt-get update
     - sudo ACCEPT_EULA=Y apt-get install -y msodbcsql
+    - sudo apt-get install -y unixodbc unixodbc-dev odbcinst
   override:
     - pyenv local 2.7.12 3.6.0
 
